force-app/main/default/objects/DMV_Appointment__c/DMV_Appointment__c.object-meta.xml
<CustomObject>
    <description>A scheduled DMV appointment, optimized for travel time and wait time using Current DMV Wait Times data.</description>
    <label>DMV Appointment</label>
    <pluralLabel>DMV Appointments</pluralLabel>
    <nameField>
        <displayFormat>DMV-{0000}</displayFormat>
        <label>Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>