force-app/main/default/objects/DMV_Appointment__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <label>Application</label>
    <type>Lookup</type>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>DMV Appointments</relationshipLabel>
    <relationshipName>DMV_Appointments</relationshipName>
</CustomField>