force-app/main/default/objects/DMV_Appointment__c/fields/Congestion_Status__c.field-meta.xml
<CustomField>
    <fullName>Congestion_Status__c</fullName>
    <label>Congestion Status</label>
    <type>Text</type>
    <length>50</length>
</CustomField>