force-app/main/default/objects/DMV_Appointment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DMV Appointments</relationshipLabel>
    <relationshipName>DMV_Appointments</relationshipName>
</CustomField>