force-app/main/default/objects/DMV_Appointment__c/fields/Estimated_Travel_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Travel_Minutes__c</fullName><label>Estimated Travel Minutes</label>
    <type>Number</type><precision>7</precision><scale>1</scale><required>false</required>
</CustomField>