force-app/main/default/objects/DMV_Appointment__c/fields/Expected_Wait_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Wait_Minutes__c</fullName><label>Expected Wait Minutes</label>
    <type>Number</type><precision>7</precision><scale>1</scale><required>false</required>
</CustomField>