force-app/main/default/objects/DMV_Appointment__c/fields/Office_Id__c.field-meta.xml
<CustomField>
    <fullName>Office_Id__c</fullName>
    <label>Office Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>