force-app/main/default/objects/DMV_Appointment__c/fields/Office_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Office_Latitude__c</fullName><label>Office Latitude</label>
    <type>Number</type><precision>9</precision><scale>6</scale><required>false</required>
</CustomField>