force-app/main/default/objects/DMV_Appointment__c/fields/Office_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Office_Longitude__c</fullName><label>Office Longitude</label>
    <type>Number</type><precision>9</precision><scale>6</scale><required>false</required>
</CustomField>