force-app/main/default/objects/DMV_Appointment__c/fields/Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Name__c</fullName>
    <label>Office Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>