force-app/main/default/objects/DMV_Appointment__c/fields/Office_Region__c.field-meta.xml
<CustomField>
    <fullName>Office_Region__c</fullName>
    <label>Office Region</label>
    <type>Text</type>
    <length>255</length>
</CustomField>