force-app/main/default/objects/DMV_Appointment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Status</label><type>Picklist</type><required>false</required>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
        <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>