force-app/main/default/objects/DMV_Appointment__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>9:00 AM</fullName><default>false</default><label>9:00 AM</label></value>
            <value><fullName>10:00 AM</fullName><default>false</default><label>10:00 AM</label></value>
            <value><fullName>11:00 AM</fullName><default>false</default><label>11:00 AM</label></value>
            <value><fullName>12:00 PM</fullName><default>false</default><label>12:00 PM</label></value>
            <value><fullName>1:00 PM</fullName><default>false</default><label>1:00 PM</label></value>
            <value><fullName>2:00 PM</fullName><default>false</default><label>2:00 PM</label></value>
            <value><fullName>3:00 PM</fullName><default>false</default><label>3:00 PM</label></value>
            <value><fullName>4:00 PM</fullName><default>false</default><label>4:00 PM</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>